--- a/Re.html
+++ b/Re.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Thrift RE:Wear — E-POS </title>
 
-
+<!-- CSS: Bootstrap, DataTables, FontAwesome -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
@@ -967,3 +967,4 @@ function renderSearchResultsIfEmpty(){
 </body>
 
 </html>
+
